--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "antd": "^3.8.0",
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
+    "immutable": "^3.8.2",
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
