--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.3"
   },
