--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.2",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.7",
